feat(style): create reusable focus style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .focus-state {
+    @apply focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-offset-2;
+  }
+}
