--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,7 @@
     @apply focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-offset-2;
   }
 }
+
+:is(html, body) {
+  height: 100%;
+}
