style: change text color input with auto fill in dark mode to light color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,14 @@ input:-webkit-autofill:focus {
   transition: background-color 5000s ease-in-out 0s;
 }
 
+html.dark input:-webkit-autofill,
+html.dark input:-webkit-autofill:hover,
+html.dark input:-webkit-autofill:focus {
+  -webkit-text-fill-color: rgb(245, 245, 245) !important;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 .container-rating > div:nth-child(1):is(:hover) > label > svg {
   fill: #facc15;
   stroke: #facc15;
